--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "manifest_version": 2,
   "description": "This extension adds Modern UI dial page into the browser",
-  "browser_action": {
-    "default_icon": "images/icon19.png",
-    "default_popup": "popup.html"
-  },
+  // "browser_action": {
+  //   "default_icon": "images/icon19.png"
+  //   //,"default_popup": "popup.html"
+  // },
   "chrome_url_overrides" : {
     "newtab": "main.html"
   },
-  "permissions": []
+  "permissions": [
+    "bookmarks"
+  ]
 }
