--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "manifest_version": 2,
   "description": "This extension adds Modern UI dial page into the browser",
+  "options_page": "options.html",
   "icons": { 
     "16": "images/icon_16.png",
     "48": "images/icon_48.png",
